--- a/src/Pages/pricing/price.css
+++ b/src/Pages/pricing/price.css
@@ -17,7 +17,7 @@
   margin: 40px 0;
 }
 /*--------------faq-------------*/
-.faq .container {
+.faq .containerr {
   max-width: 70%;
   border-radius: 5px;
 }
