--- a/src/Pages/common/footer/footer.css
+++ b/src/Pages/common/footer/footer.css
@@ -33,13 +33,13 @@
 footer {
   background-color: #eeeeee;
 }
-footer .container {
+footer .containerr {
   display: grid;
   grid-template-columns: 3fr 2fr 2fr 4fr 3fr;
   grid-gap: 30px;
 }
 @media screen and (max-width: 768px) {
-  footer .container {
+  footer .containerr {
     grid-template-columns: repeat(2, 1fr);
   }
 }
